syntax = "proto3";
package articles;

option go_package = "github.com/0xEDU/goblog/proto/articles";

service ArticleService { rpc GetArticleList(ArticleListRequest) returns (ArticleListResponse); }

message Article {
  string id = 1;
  string author = 2;
  bytes markdown = 3;
}

message ArticleListResponse { repeated Article articles = 1; }

message ArticleListRequest {}
